--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -1,140 +1,46 @@
-.blog-teaser-link{
-  text-decoration: none;
-  margin: 0;
-  padding:0;
-  box-sizing: border-box;
-  overflow: hidden;
-  display:block;
-  &:visited{
-    color:  $color-text;
-    text-decoration: none;
-    background-color: white;
-  }
-  &:active{background-color: white;}
-  &:hover{
-    background-color: #f3f3f3;
-  }
+.red{
+  background-color: red;
 }
 
-.blog-teaser-parent {
-  max-width: 1370px;
-
-  &:hover{
-    background-color: #f3f3f3;
-  }
+//Index seite main css
 
 
 
+  .one{
+    position: relative;
 
-  .blog-teaser {
 
-    padding: 1rem 0;
-    border-bottom: 1px solid #cccccc;
-
-    .blog-teaser-image-parent {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      .blog-teaser-image{
-        width: 100%;
-        height: auto;
-        max-width: 250px;
-      }
-      @include resp(768px){
-        display:none;
+    &:after{
+      content: "01";
+      position: absolute;
+      z-index: 2;
+      font-size: 6rem;
+      top: -32px;
+      left: -29px;
+      font-family: playfair;
+      color: transparent;
+      -webkit-text-stroke: 2px #FFF122;
+      letter-spacing: 3px;
+      transition: 0.5s ease-out;
+    }
+    &.two{
+      &:after{
+        content: "02";
       }
     }
-
-
-
-    .blog-teaser-middle {
-      padding: 1rem 0.5rem;
-      .blog-teaser-heading {
-        span {
-          font-family: 'source code pro';
-          text-align: left;
-        }
-      }
-
-      .blog-teaser-bottom {
-        margin-top: 0.5rem;
-
-        span {
-          font-family: 'source code pro';
-          margin-left: 0.2rem;
-          padding-left: 0.2rem;
-          border-left: 1px solid rgb(204, 204, 204);
-          font-size: 1rem;
-          color: #383838;
-
-          &:nth-child(1) {
-            border-left: none;
-            margin-left: 0rem;
-            padding-left: 0rem;
-          }
-        }
+    &.three {
+      &:after {
+        content: "03";
       }
     }
-    .blog-teaser-text{
-      padding: 1rem 0;
-    }
-  }
-}
-
-.blog-heading-parent {
-  margin-top: 7rem;
-  margin-bottom: 3rem;
-    h2 {
-      padding: 1rem 0;
-
-      > * {
-        border: 1px solid blue;
-        padding: 2rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-      }
-
-      p {
-        margin-bottom: 0;
+    &.four {
+      &:after {
+        content: "04";
       }
     }
-
-  .blog-topic{
-    border-bottom: 1px solid #373735;
-    display: inline;
-  }
-  .blog-heading-picture-parent {
-    display: flex;
-    justify-content: center;
-    .blog-heading-picture {
-      max-width: 400px;
-      height: auto;
-      width: 100%;
-
+    &:hover{
+      &:after{
+        transform: translate(0, -50px);
+      }
     }
   }
-
-  @include resp(700px){
-    margin-top: 3rem;
-  }
-}
-
-.blog-textblog{
-  margin: auto;
-  line-height: 1.6rem;
-}
-
-//footer css
-.footer{
-  padding:2rem;
-  padding-left: 0;
-
-
-
-  .icon{
-   width: 56px;
-    max-width: 60px;
-    padding: 0 0.7rem;
-  }
-}
